[package]
name = "remote_commander"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# System monitoring and control
sysinfo = "0.30"
system_shutdown = "4.0"
webbrowser = "1.0"

# Config
dotenvy = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
]}

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
